*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/samples/samples.html
+++ b/bundles/org.eclipse.jdt.doc.isv/samples/samples.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Examples - Installation</h1>
-<h3> 1.0 Installation</h3>
+<h3> Installation</h3>
 To install the examples, download the zip file containing the examples.&nbsp; 
 <p> The workbench should not be running while the examples are being&nbsp; installed.&nbsp; 
   Extract the contents of the zip file to the root directory&nbsp; of your Eclipse 
