--- a/bundles/org.eclipse.platform.doc.isv/samples/samples.html
+++ b/bundles/org.eclipse.platform.doc.isv/samples/samples.html
@@ -8,10 +8,10 @@
 <body>
 
 <h1>
-<b>Examples - Installation</b></h1>
+<b>Examples Guide</b></h1>
 
 <h3>
- Installation via the Update Manager</h3>
+ Installing examples via the Update Manager</h3>
 
 <p>
 The Eclipse SDK examples are found on the Eclipse project update site at <a href="http://update.eclipse.org/updates">http://update.eclipse.org/updates</a>.
@@ -40,7 +40,7 @@ To locate and install them into a product:</p>
 </ol>
 
 <h3>
- Manual Installation</h3>
+ Installing examples manually</h3>
 To install the examples without the Update Manager, download the appropriate Eclipse SDK Example zip file from the
 Eclipse project web site at <a href="http://www.eclipse.org/downloads">http://www.eclipse.org/downloads</a>.
 <p>
@@ -53,6 +53,9 @@ zip file to <b>d:\eclipse-sdk\</b> (the
 subdirectories named <b>eclipse</b> should line up).</p>
 <p>Start the workbench.&nbsp;The workbench will report that updates have been
 detected; accept them. The examples are now installed in the workbench.</p>
+
+<p>You can verify that examples have been installed by looking for <b>File &gt;
+New &gt; Example...</b> in the workbench menu bar.</p>
 
 <p>&nbsp;
 <p><a href="hglegal.htm"><img SRC="ngibmcpy.gif" ALT="Copyright IBM Corp. and others 2000, 2002.  All Rights Reserved." BORDER=0 height=12 width=250></a>
