*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/samples/samples.html
+++ b/bundles/org.eclipse.jdt.doc.isv/samples/samples.html
@@ -6,8 +6,7 @@
 <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
 </head>
 <body>
-<h1>Examples - Installation</h1>
-<h3> Installation</h3>
+<h1>Installing the examples</h1>
 To install the examples, download the zip file containing the examples.&nbsp; 
 <p> The workbench should not be running while the examples are being&nbsp; installed.&nbsp; 
   Extract the contents of the zip file to the root directory&nbsp; of your Eclipse 
