--- a/bundles/org.eclipse.platform.doc.isv/samples/samples.html
+++ b/bundles/org.eclipse.platform.doc.isv/samples/samples.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>
-<b>Examples Guide</b></h1>
+<b>Installing the examples</b></h1>
 
 <h3>
  Installing examples via the Update Manager</h3>
