*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_newWizards.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_newWizards.htm
@@ -16,7 +16,7 @@ org.eclipse.ui.newWizards
 <H3>
 org.eclipse.ui.newWizards</H3>
 <P >
-You can add a wizard to the <b> File-&gt;New </b> menu option in the workbench using the
+You can add a wizard to the <b> File-&gt;New-&gt;Examples... </b> menu option in the workbench using the
 <a href="../reference/extension-points/org_eclipse_ui_newWizards.html"><b> org.eclipse.ui.newWizards</b></a> extension point. The readme
 tool example uses this extension point definition to add the Readme File wizard:</P>
 <font color='#4444CC'><pre>
@@ -39,14 +39,17 @@ tool example uses this extension point definition to add the Readme File wizard:
 &lt;/extension&gt;
 </pre></font>
 <P >
-The <b> category</b> describes where the wizard will be grouped when the wizard selection dialog is used to find and launch a wizard. The category
+The <b> category</b> describes where the wizard will be grouped when the <b>New
+Example</b> wizard shows the available wizards.&nbsp; The category
 <b> name</b> 
-defines the label that is used in the wizard.&nbsp; The wizard itself is
-assigned to the category.&nbsp;&nbsp; Its <b>name</b>, <b>icon</b>,
-and <b>description</b> all show up in the new wizard
-selection dialog shown below.</P>
+ defines the label that is used in the list on the left hand side of the New
+Example wizard.&nbsp; The wizard itself is
+assigned to the category.&nbsp;&nbsp; Its <b>name</b> and <b>icon</b> are shown
+on the right hand side of the wizard when you click on the category.&nbsp; The <b>description</b> 
+of the wizard is shown at the top of the wizard when you select it in the right
+hand list as shown below:</P>
 <P >
-<img border="0" src="images/newwizardlist.jpg" width="500" height="500" alt="New wizard selection dialog with readme entries"></P>
+<img border="0" src="images/newwizardlist.jpg" width="500" height="500" alt="New example wizard with readme entries"></P>
 <P >
 All of this appears based on the markup in the <b>plugin.xml
 </b>file.&nbsp; None of the plug-in code runs
