remove next/back buttons

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-01.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-01.htm
@@ -11,16 +11,10 @@
 <H1 CLASS="Head">
 Basic tutorial</H1>
 <P>This tutorial provides a step by step walk-through of the
-Workbench. Click the next
-<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-and back
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-links to read through the topics in order.</P>
+Workbench.&nbsp;<br>
+</P>
 
 
-<P>
-<a href="qs-02a.htm"><img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12">
-The Workbench</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
 
