--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2f.htm
@@ -19,15 +19,11 @@ task:</P>
   <li>
     Double click on the task</li>
 </ul>
-<p CLASS="Para">In both cases the file's editor is opened and the line with which the selected task is associated is highlighted.</p>
-
-
-<P><a href="qs-37-3b.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-Bookmarks</a><P><a href="qs-37-2d2.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-Associated tasks</a><br>
+<p CLASS="Para">In both cases the file's editor is opened and the line with which the selected task is associated is highlighted.
 <br>
+</p>
+
+
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
