--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
@@ -48,15 +48,7 @@ active.
 <p CLASS="Intro"><img align="texttop" border="0" src="../images/Image2_active_view.jpg" width="644" height="499" alt="Workbench"></p>
 <P CLASS="Intro">Clicking on the welcome page (editor) you can see that the
 editor's tab turns blue, and the Navigator's title bar is no longer blue. The
-welcome page is now our active editor.<P CLASS="Intro"><img align="texttop" border="0" src="../images/Image2_active_editor.jpg" width="644" height="499" alt="Welcome page selected"><P>
-<a href="qs-02d.htm">
-<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-Editors</a>
-
-
-<P><a href="qs-02a.htm">
-<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
-The Workbench</a><br>
+welcome page is now our active editor.<P CLASS="Intro"><img align="texttop" border="0" src="../images/Image2_active_editor.jpg" width="644" height="499" alt="Welcome page selected">
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
