--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96a.htm
@@ -18,10 +18,11 @@ CVS repository to the Workbench:
 <ol>
   <li>Switch to the CVS Repository Exploring perspective or add the CVS Repositories 
     view to the current perspective.</li>
-  <li>Switch the CVS Repositories View to modules mode by selecting <b>Show Modules</b> 
-    in the drop down menu found in the title bar of the view.</li>
   <li>In the CVS Repositories view, expand the repository location.</li>
-  <li>Expand <b>HEAD</b> and select the modules that you want to add to the Workbench.</li>
+  <li>Expand <b>HEAD</b> and select the modules that you want to add to the Workbench. 
+    <em>Note</em>: Modules appear as root folders of the repository but are assocated 
+    with the <img src="../images/tasks-96b-module_rep.gif" alt="CVS module icon" width="16" height="16"> 
+    icon.</li>
   <li>From the pop-up menu select <b>Check Out Module</b>. This will checkout 
     the module into one or more projects in the local workspace, depending on 
     how the module is defined in the repository.</li>
@@ -34,6 +35,7 @@ CVS repository to the Workbench:
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-96.htm">Checking out a project from a CVS repository</a><br>
+<a href="tasks-96b.htm">Checking out a folder into an existing project</a><br>
 <a href="tasks-92.htm">Creating a CVS repository location</a><br>
 <a href="tasks-103.htm">Replacing resources in the Workbench</a><br>
 <a href="tasks-110.htm">Discovering branch and version tags</a><br>
