sync icons and sync all action added

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30.htm
@@ -30,13 +30,12 @@ your Workbench resources with their changes.</p>
     committing, in case there are conflicts with the resources in your Workbench
    and the resources currently in the branch.&nbsp;&nbsp;</p>
    
-<p>When you select <b>Team &gt; Synchronize with Repository</b> for a resource, 
-   the Synchronize view opens. You can set filters to control whether you 
-want    to view only i<i>ncoming changes</i> or <i>outgoing changes</i>. Incoming
-changes    come from the branch. If accepted, they will update the Workbench
-resource to    the latest version currently committed into the branch. Outgoing
-changes come    from the Workbench. If committed, they will change the branch
-resources to match    those currently present in the Workbench. </p>
+<p>The synchronize view contains filters to control whether you want to view only 
+  i<i>ncoming changes</i> or <i>outgoing changes</i>. Incoming changes come from 
+  the branch. If accepted, they will update the Workbench resource to the latest 
+  version currently committed into the branch. Outgoing changes come from the 
+  Workbench. If committed, they will change the branch resources to match those 
+  currently present in the Workbench. </p>
      
 <p>Regardless of which mode (filter) you select, the Synchronize view always 
 shows    you conflicts that arise when you have locally modified a resource 
