--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
@@ -11,12 +11,28 @@
 <BODY BGCOLOR="#ffffff">
 <H1>Synchronizing with the repository</H1>
 
+<h3>Method 1: Using the context menu</h3>
 <p>To synchronize resources in the Workbench with those in the repository: </p>
 
 <ol>
   <li>In the Navigator view, select the resources that you want to synchronize.</li>
   <li>Right click and select <b>Team &gt; Synchronize with Repository</b>. The 
     Synchronize view opens.</li>
+</ol>
+<h3>Method 2: Using the synchronize action</h3>
+<ol>
+  <li> From the CVS Repository Exploring perspective select the <img src="../images/cvs_synch.gif" width="16" height="16"> 
+    <strong>Synchronize CVS projects</strong> button. </li>
+  <li>Select to either include all projects that are shared with CVS or specify 
+    a working set. Then select <strong>OK.</strong></li>
+  <li>The Synchronize view will open.</li>
+</ol>
+<p> Note: The synchronize action is not enabled by default in other non-CVS specific 
+  perspectives. You can enable the action to appear in your current perspective 
+  by selecting <strong>Window &gt; Customize Perspective</strong>. Then enable 
+  the CVS item via <strong>Other > CVS</strong>.</p>
+<h3>From within the synchronize view</h3>
+<ol>
   <li>Use the toolbar buttons to switch modes for this view. There are three modes: 
     <ul>
       <li>Incoming mode - shows incoming changes only (resources in the repository 
