*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-97_standalone_ets.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-97_standalone_ets.htm
@@ -48,9 +48,12 @@
   plug-ins. </p>
 
 
+<P>&nbsp;</P>
+<p><a href="qs-96_non_ant_pjs.htm"> <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+  Non-Ant project builders</a></p>
+<p></p>
 <P><br>
-<a href="../hglegal2002.htm">
-<img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+  <a href="../hglegal2002.htm"> <img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> 
 </P>
 
 </BODY>
