--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85_ant_configs.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-85_ant_configs.htm
@@ -60,8 +60,12 @@
 
 
 <P><br>
-<a href="../hglegal2002.htm">
-<img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+  <a href="../hglegal2002.htm"> </a><a href="qs-85a_ant_view.htm"><img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+  Using the Ant view</a></P>
+<p><a href="qs-84_run_ant.htm"> <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+  Running Ant scripts</a></p>
+<p>&nbsp;</p>
+<P><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> 
 </P>
 
 </BODY>
