--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-86_use_cases.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-86_use_cases.htm
@@ -18,11 +18,16 @@
 </ul>
 <p>We'll start by using an Ant script to handle various aspects of deploying Eclipse 
   plug-ins.</p>
+<p>&nbsp;</p>
 
 
+<P><a href="qs-87_plugin_deploy.htm"><img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+  Deploying Eclipse plug-ins</a></P>
+<p><a href="qs-85a_ant_view.htm"> <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+  Using the Ant view</a></p>
+<p></p>
 <P><br>
-<a href="../hglegal2002.htm">
-<img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+  <a href="../hglegal2002.htm"> <img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a> 
 </P>
 
 </BODY>
