added anchor for link

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_config.htm
@@ -83,7 +83,9 @@ the primary feature plug-in directory.&nbsp; The image should be supplied in
 24-bit color BMP format (RGB format) and should be approximately 500x330 pixels in
 size.&nbsp; If splash screens need to be customized for different locales, they
 can be placed in a fragment of the primary feature's plug-in.</p>
+<a name="preferences"></a>
 <h3>Preferences defaults</h3>
+
 <p>The <b>plugin_customization.ini</b>
  file is used to set the default preference values for preferences defined by
 other plug-ins.&nbsp; This file is a <b>java.io.Properties</b> format file.
