Fixed style of method references

--- a/bundles/org.eclipse.platform.doc.isv/guide/resInt_filesystem.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resInt_filesystem.htm
@@ -98,7 +98,7 @@ The API is based on <b>handles</b>.&nbsp; When you use API like <b>getProject</b
 or <b>getFolder</b>, you are returned a handle to the
 resource.&nbsp;&nbsp; There is no guarantee or requirement that the resource itself exists
 until you try to do something with the handle.&nbsp; If you expect a resource to
-exist, you can use <b>exists()</b>  protocol to ensure
+exist, you can use <b>exists</b> method to ensure
 this is the case.&nbsp;&nbsp;  </P>
 <P >
 To navigate the workspace from a plug-in, we must first obtain the <a href="../reference/api/org/eclipse/core/resources/IWorkspaceRoot.html"><b>IWorkspaceRoot</b></a>, which represents the top of the resource hierarchy in the workspace.</P>
@@ -176,7 +176,7 @@ Finally, we'll create another images folder and move the newly created file to i
 <P>Many of the resource API methods include a <b>force</b>
 boolean flag which specifies whether resources that are out of synch with the
 corresponding files in the local file system will be updated anyway.&nbsp; See <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a>
-for more information.&nbsp; You can also use <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a><b>.isSynchronized()
+for more information.&nbsp; You can also use <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a><b>.isSynchronized
 </b>to determine whether a particular resource is in synch with the file system.</P>
 
 
@@ -195,7 +195,7 @@ by using the workbench and plug-ins, or by directly using file system based tool
 based on the project's location (usually the <b>workspace</b>
 directory).&nbsp; To obtain the full file system path to a resource, you must query its location using
 <b>
-<a href="../reference/api/org/eclipse/core/resources/IResource.html">IResource</a>.getLocation().&nbsp;
+<a href="../reference/api/org/eclipse/core/resources/IResource.html">IResource</a>.getLocation.&nbsp;
 </b>Howevever, you cannot use
 <b> <a href="../reference/api/org/eclipse/core/resources/IProjectDescription.html">IProjectDescription</a>.setLocation
 </b>to change its location, because that method is just a simple setter for a
