*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-39.htm
@@ -21,7 +21,7 @@
         Press <strong>F4</strong> or
       </li>
       <li>
-        Choose <strong>Open Type Hierarchy</strong> from the view&rsquo;s pop-up menu or
+        Choose <strong>Open Type Hierarchy</strong> from the view's pop-up menu or
       </li>
       <li>
         Drag and drop the element to the Hierarchy view or
