--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -27,7 +27,7 @@
       </li>
     </ul>
     <p>
-      Note: Files and Java elements such as types and their members change in time. A &lsquo;snapshot&rsquo; of what they look like a point in time (as saved in the local
+      Note: Files and Java elements such as types and their members change in time. A 'snapshot' of what they look like a point in time (as saved in the local
       history) is called an edition.
     </p>
     <p>
