--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
@@ -33,7 +33,7 @@
         In a Java editor, select a reference to the class or interface.
       </li>
       <li>
-        From the editor's pop-up menu, select <strong>Refactor</strong> &gt; </strong>Rename</strong> or use the
+        From the editor's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> or use the
         <strong>Refactor</strong> &gt; <strong>Rename</strong> action from the global menu bar.
       </li>
     </ol>
