--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
@@ -27,7 +27,7 @@
             From the menu bar, select <strong>Navigate</strong> &gt; <strong>Open Declaration</strong>
           </li>
           <li>
-            From the editor&rsquo;s pop-up menu, select <strong>Open Declaration</strong>
+            From the editor's pop-up menu, select <strong>Open Declaration</strong>
           </li>
           <li>
             Press <strong>F3</strong>
