--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
@@ -52,7 +52,7 @@
 			        From the menu bar, select <strong>Edit &gt; Copy</strong>
 			      </li>
 			      <li>
-			        From the view&rsquo;s pop-up menu, select <strong>Copy</strong>
+			        From the view's pop-up menu, select <strong>Copy</strong>
 			      </li>
 		    </ul>
 		</li>
