Added link to linked resource concept doc

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -112,9 +112,10 @@ size throughout.]</p>
       workspace project are laid out in the local file system. When creating a
       folder (or file), you can link it to an existing location in the file
       system outside of the workspace. This is done using the Advanced section
-      on the New Folder (and New File) wizards. This is useful for integrating
-      with external libraries or source code directories that cannot readily be
-      copied into an Eclipse workspace.
+      on the New Folder (and New File) wizards. These 
+      <a href="../concepts/concepts-13.htm">linked resources</a>
+      are useful for integrating with external libraries or source code directories that 
+      cannot readily be copied into an Eclipse workspace.
   </tr>
 </table>
 
