fixed CHKPII errors

--- a/bundles/org.eclipse.platform.doc.isv/guide/resInt_linked.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resInt_linked.htm
@@ -74,7 +74,7 @@ define a path variable to work around this difference:
 </p>
 <p>
 All the API for creating, manipulating, and resolving path variables is found on the
-<a href="../reference/api/org/eclipse/core/resources/IPathVariableManager.html">IPathVariableManager</a></b>
+<b><a href="../reference/api/org/eclipse/core/resources/IPathVariableManager.html">IPathVariableManager</a></b>
 class.  This class also provides methods for validating variable names and values before
 you create them, and for installing a listener to be notified when path variable definitions
 change.  You can grab an instance of this class using
@@ -161,7 +161,7 @@ defining a path variable:
    IPathVariableManager pathMan = workspace.getPathVariableManager();
    String name = &quot;TEMP&quot;;
    IPath value = new Path(&quot;c:\\temp&quot;);
-   if (pathMan.validateName(name).isOK() && pathMan.validateValue(value).isOK()) {
+   if (pathMan.validateName(name).isOK() &amp;&amp; pathMan.validateValue(value).isOK()) {
       pathMan.setValue(name, value);
    } else {
       //invalid name or value, throw an exception or warn user
