--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_core.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_core.htm
@@ -43,6 +43,9 @@ Java IDE infrastructure.&nbsp; The JDT Core packages include:</p>
     utility classes for manipulating .class files and Java model elements.
   </li>
 </ul>
+<p>Manipulation of the structure of a compilation unit should be done using <code>org.eclipse.jdt.core.dom</code> instead of <code>org.eclipse.jdt.core.jdom</code>.
+<code>org.eclipse.jdt.core.jdom</code> will be deprecated in the 2.2. stream and replaced with <code>org.eclipse.jdt.core.dom</code>.
+</p>
 <p><a href="../hglegal2002.htm"><img src="../ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"> 
   </a> </p>
 </body>
