--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_model.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_model.htm
@@ -18,8 +18,8 @@
 <p> The package <a href="../reference/api/org/eclipse/jdt/core/package-summary.html"><b> 
   org.eclipse.jdt.core</b></a> defines the classes that model the elements that 
   compose a Java program. The JDT uses an in-memory object model to represent 
-  the structure of a Java program. This model is hierarchical. Elements of a program 
-  can be decomposed into child elements.</p>
+  the structure of a Java program. This structure is derived from the project's class path.
+  The model is hierarchical. Elements of a program can be decomposed into child elements.</p>
 <p> Manipulating Java elements is similar to manipulating resource objects.&nbsp; When you work with a Java 
   element, you are actually working with a <b>handle</b> to some underlying model 
   object.&nbsp; You must use the <b>exists()</b> protocol to determine whether 
@@ -35,7 +35,7 @@
     <td> <a href="../reference/api/org/eclipse/jdt/core/IJavaModel.html"><b> IJavaModel</b></a> 
     </td>
     <td> Represents the root Java element, corresponding to the workspace. The 
-      parent of all Java projects. </td>
+      parent of all projects with the Java nature. It also gives you access to the projects without the java nature.</td>
   </tr>
   <tr> 
     <td> <a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html"><b> 
