--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
@@ -31,11 +31,15 @@
 <P>If there are conflicting changes on any files that are committed in the above 
   fashion, the operation will fail. If this occurs, you must either perform an 
   update or use the Synchronize view to resolve the conflicts. It is considered 
-  a more ideal workflow to always update before committing in order to 
-  ensure that you have the latest state of the repository before committing more 
-  changes.
+  a more ideal workflow to always update before committing in order to ensure 
+  that you have the latest state of the repository before committing more changes. 
 </p>
-
+<P>If one or more of the resources being committed are new and not yet added to 
+  CVS control, you will be prompted to add these resources before the commit is 
+  performed. You can choose to add all, some or none of the new resources to CVS 
+  control before performing the commit. Any resources that are not under CVS control 
+  will not be committed. Committing from the Synchronize view also prompts if 
+  there are new resources.</p>
 <P>To commit changes in the Synchronize view:
 </p>
 
