--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
@@ -25,9 +25,10 @@ place when files are committed and checked out.
     any new files that are to be committed are added to CVS version control as 
     the keyword substitution mode can only be set for files that are already under 
     CVS control.</li>
-  <li>From the pop-up menu, select<b> Team &gt; Change ASCII/Binary Property</b>.
+  <li>From the pop-up menu, select<b> Team &gt; Change ASCII/Binary Property</b>. 
     The Set Keyword Substitution Mode wizard will open.</li>
-  <li>On the first page of the wizard, select the mode to be applied to the selected files: 
+  <li>On the first page of the wizard, select the mode to be applied to the selected 
+    files: 
     <ul>
       <li><b>Automatic</b> - uses the file type to determine whether selected 
         resources should use binary or the default ASCII mode (the default ASCII 
@@ -36,10 +37,13 @@ place when files are committed and checked out.
         are not altered in any way by CVS.</li>
       <li><b>ASCII without keyword substitution</b> - sets all the selected files 
         to ASCII but CVS does not perform any keyword substitution. The line endings 
-        of ASCII files may be altered by CVS to align with a platform's line-terminator convention.</li>
+        of ASCII files may be altered by CVS to align with a platform's line-terminator 
+        convention.</li>
       <li><b>ASCII with keyword substitution</b> - sets all the selected files 
         to ASCII and CVS will perform the selected type of keyword substitution.</li>
-    </ul><p>Click <b>Next</b> to go to the next page.</p></li>
+    </ul>
+    <p>Click <b>Next</b> to go to the next page.</p>
+  </li>
   <li>On the <b>Include versioned files</b> page of the wizard, indicate whether 
     files already shared in the repository are to be affected. If this setting 
     is disabled, only files that have been added to CVS control but not committed 
@@ -49,6 +53,11 @@ place when files are committed and checked out.
     whether files that have outgoing changes are to be affected. This page will 
     only appear if there are files with outgoing changes. Click <b>Next</b> to 
     go to the next page.</li>
+  <li>On the <strong>Enter Commit Comment</strong> page of the wizard, enter the 
+    commit comment to be associated with any file commits. Files will need to 
+    be committed if changing the file type from Binary to ASCII results in a change 
+    in the file content due to line terminator adjustments. Click <b>Next</b> 
+    to go to the next page.</li>
   <li>On the <b>Summary</b> page of the wizard, inspect the proposed keyword substitution 
     mode settings to ensure they are correct. Click <b>Finish</b> to apply the 
     changes. </li>
