35240 - Full name of JDT should be capitalized and fix up some of the names of linked pages.

--- a/bundles/org.eclipse.platform.doc.isv/guide/arch.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/arch.htm
@@ -35,7 +35,7 @@ framework and the SWT widget toolkit. </p>
 
 
 <p>The Eclipse SDK includes the basic platform plus two major tools that are
-useful for plug-in development.&nbsp; The Java development tooling (JDT)
+useful for plug-in development.&nbsp; The Java Development Tooling (JDT)
 implements a full featured Java development environment.&nbsp; The Plug-in
 Developer Environment (PDE) adds specialized tools that streamline the
 development of plug-ins and extensions.</p>
