*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-cvs-watch.htm
@@ -9,12 +9,11 @@
       
   <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1"
  type="text/css">
-  <title>CVS Watches</title>
+  <title>CVS Watch/Edit</title>
    
 </head>
  <body style="background-color: rgb(255,255,255);">
-   
-<h1 class="Head"> CVS Watches</h1>
+<h1 class="Head"> Watch/Edit</h1>
    
 <p class="Para"> CVS provides a notification scheme which allows a group of developers 
   to know if somebody is working on a given file. This facility is known as <em>watches</em>. 
