--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
@@ -4,11 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Using CVS Watches</title>
+<title>Finding out who's working on what: watch/edit</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Using CVS Watches </H1>
+<H1 CLASS="Head"> Finding out who's working on what: watch/edit</H1>
 <P CLASS="Para">CVS provides a notification scheme which allows you to know if 
   someone is modifying a file that you care about. This facility is known as <em>watches</em>. 
   By setting a <em>watch</em> on a file, you can have CVS notify you via email 
